; ModuleID = '/home/carl/AnghaBench/RetroArch/bootstrap/psp1/kernel_functions_prx/extr_main.c_module_start.c'
source_filename = "/home/carl/AnghaBench/RetroArch/bootstrap/psp1/kernel_functions_prx/extr_main.c_module_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buttons = common dso_local global i64 0, align 8
@thread_active = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [12 x i8] c"main Thread\00", align 1
@main_thread = common dso_local global i64 0, align 8
@main_thread_id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @module_start(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load i8*, i8** %4, align 8
  store i64 0, i64* @buttons, align 8
  store i64 0, i64* @thread_active, align 8
  %7 = load i64, i64* @main_thread, align 8
  %8 = call i32 @sceKernelCreateThread(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i64 %7, i32 17, i32 512, i32 0, i32* null)
  store i32 %8, i32* @main_thread_id, align 4
  %9 = load i64, i64* @main_thread, align 8
  %10 = icmp sge i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @main_thread_id, align 4
  %13 = call i32 @sceKernelStartThread(i32 %12, i32 0, i32 0)
  br label %14

14:                                               ; preds = %11, %2
  ret i32 0
}

declare dso_local i32 @sceKernelCreateThread(i8*, i64, i32, i32, i32, i32*) #1

declare dso_local i32 @sceKernelStartThread(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
